# computer_vision

./: .gitignore  01Stereo.cpp  02Solarization.cpp  03OrientationHistograms.cpp  04Sampling.cpp  CMakeLists.txt  README.md  main.cpp  main.py
